@@ -1,3 +1,8 @@
+2020-05-28  Adam Cozzette  <acozzette@google.com>
+
+        * inst/include/Rcpp/as.h: Added support for std::string_view
+        * inst/include/Rcpp/traits/r_type_traits.h: Idem
+
 2020-05-18  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Roll minor version
